<package format="3">
  <name>basic</name>
  <version>2.0.0</version>
  <description>The basic package</description>

  <maintainer email="lswang@mail.ecust.edu.cn">LS.Wang</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <depend>eigen3</depend>
  <depend>pcl_conversions</depend>

  <build_depend>libpcl-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>

  <exec_depend>libpcl-common1.14</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>